# template_fastapi

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_database.py
app/core/: config.py  database.py
app/models/: user.py
app/routers/: health.py  users.py
tests/: test_main.py
